[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/RectColour.gd" type="Script" id=1]

[node name="RectColour" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 115.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="."]
margin_left = 95.0
margin_right = 115.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 75.0
margin_right = 95.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="."]
margin_right = 75.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_top = 20.0
margin_right = 60.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 35.0
margin_top = 20.0
margin_right = 115.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 80 )
color = Color( 0.627451, 0.627451, 0.627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 19.0
text = "Colour Spot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Expand" type="Button" parent="."]
margin_left = 95.0
margin_top = 80.0
margin_right = 115.0
margin_bottom = 100.0
text = ">"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
[connection signal="button_down" from="Move" to="." method="_on_Move_button_down"]
[connection signal="button_up" from="Move" to="." method="_on_Move_button_up"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="button_down" from="Expand" to="." method="_on_Expand_button_down"]
[connection signal="button_up" from="Expand" to="." method="_on_Expand_button_up"]
